Beleg Android client

--- a/ctDataGenerator/Beleg/master.tex
+++ b/ctDataGenerator/Beleg/master.tex
@@ -118,6 +118,7 @@ Abruf: 21.12.2011\end{verbatim}}
 \input{Ingo/Aufgabenstellung}
 
 \chapter{Datengenerator}\label{Datengenerator}
+\input{Christof/Abarbeitung}
 
 %\chapter{Theoretische Grundlagen}
 %Die f\"{u}r den Untersuchungsgegenstand relevanten Themen, die \"{u}ber die
