--- a/ctDataGenerator/Beleg/Ingo/Abstract.tex
+++ b/ctDataGenerator/Beleg/Ingo/Abstract.tex
@@ -1,1 +1,8 @@
 \section*{Abstract}\label{Abstract}
+Diese Arbeit baut auf das Projekt Datenbankkonfigurationen\footnote{https://dl.dropbox.com/u/608146/ADBC1\%20OLAP.pdf}, dass während der Vorlesungsreihe ADBC1 erstellt wurde, auf.
+Im Projekt Datenbankkonfigurationen wird untersucht, wie sich die Ausführungsgeschwindigkeit von Abfragen steigern lässt.
+Im Projekt Ausführungsplanoptimierung in PostgreSQL wird darüberhinaus untersucht, welche Ausführungspläne, für bestimmte Konfigurationen und bestimmte Queries erzeugt werden. Und wie sich diese Pläne auf die Ausführungs\-geschwin\-digkeit von SQL-Queries auswirken.
+In beiden Projekten wird nur der Bereich OLAP betrachtet.
+Diese Arbeit behandelt nur Datenbankkonfigurationen, die Einfluss auf den Ausführungsplan haben. Für alle Konfigurationen die keinen Einfluss haben, wird der Standardwert von PostgreSQL beibehalten.
+Ziel der Arbeit ist, Annahmen über die Ausführungsgeschwindigkeiten verschiedener Ausführungspläne zu treffen, diese theoretisch zu begründen und dann durch Messergebnisse praktisch zu belegen. Anhand der Messergebnisse werden die aufgestellten Hypothesen bestätigt oder wiederlegt.
+Für wiederlegte Hypothesen wird eine Begründung gesucht.
