--- a/ctDataGenerator/Beleg/Ingo/AktuellerWissensstand.tex
+++ b/ctDataGenerator/Beleg/Ingo/AktuellerWissensstand.tex
@@ -1,2 +1,6 @@
 \section{Der aktuelle Wissensstand}\label{DerAktuelleWissensstand}
-\cite{bib4}
+Noch nicht vorhandene Kenntnisse über die Erstellung von Ausführunsplänen werden haupt-
+sächlich aus Onlineressourcen bezogen. Primärliteratur zur gewählten Datenbank
+ist unter www.postgresql.org zu ?nden. Unter dieser Adresse ist das gewählte
+DBMS dokumentiert. Auf dieser Seite wird eine Einf¨uhrung in PostgreSQL gegeben.
+Es gibt Installationsanleitungen, eine umfassende Dokumentation von PostgreSQL und Werkzeuge die ein e?zienteres Arbeiten mit PostgreSQL ermöglichen.
