--- a/ctDataGenerator/Beleg/Ingo/Einleitung.tex
+++ b/ctDataGenerator/Beleg/Ingo/Einleitung.tex
@@ -1,1 +1,4 @@
 \section{Einleitung}\label{Einleitung}
+Ziel dieses Projektes ist zu zeigen, welche Ausführungspläne, für welche Queries bei welchen Indexarten bei welchen Spalten die Ausführungszeit beschleunigen.
+
+Es wird davon ausgegangen, dass die zur Verfügung stehenden Indexarten sowie die Schreibweise des Queries, den Ausführungsplan und damit die Ausführungs\-geschwindigkeit verändern können.
