--- a/ctDataGenerator/Beleg/Ingo/RelevanzForschungsgegenstand.tex
+++ b/ctDataGenerator/Beleg/Ingo/RelevanzForschungsgegenstand.tex
@@ -1,1 +1,9 @@
 \section{Relevanz des Forschungsgegenstandes}\label{RelevanzDesForschungsgegenstandes}
+Der Forschungsgegenstand dieser Arbeit ist, Annahmen über erzeugte Ausführ\-ungs\-pläne von Abfragen zu treffen und gegebenfalls wiederlegte Annahmen zu erklären.
+Der Forschungsgegenstand ist relevant, da bisher keine konkreten Aus\-führ\-ungs\-pläne für die gewählten Abfragen vorliegen. Ziel dieser Foschung ist es, Ausführungspläne zu finden, die die höchste Ausführungsgeschwindigkeit für alle Abfragen bringt. 
+
+Um die optimalen Ausführungspläne zu finden, muss sich vertiefend in eine PostgreSQL
+eingearbeitet werden. Das geschieht z.B. unter Zuhilfenahme von Büchern und
+Online-Ressourcen. In diesen Medien ist der Forschungsstand zur Erstellung von
+Ausführungsplänen dokumentiert. Bei der Anpassung des Datengenerators müssen
+darüberhinaus technische Probleme gelöst werden.
