--- a/ctDataGenerator/Beleg/master.tex
+++ b/ctDataGenerator/Beleg/master.tex
@@ -76,19 +76,10 @@
 \lstlistoflistings
 
 \begin{listofacronyms}
-\acronym{API}{Application Programming Interface}
-\acronym{ACID}{Atomicity, Consistency, Isolation, Durability}
-\acronym{BLOB}{Binary Large Object}
-\acronym{DBMS}{Database management system}
+\acronym{DBMS}{Datenbankmanagementsystem}
 \acronym{ERD}{Entity-Relationship Diagram}
-\acronym{IDE}{Integrated Development Environment}
-\acronym{JDK}{Java Development Kit}
-\acronym{MyISAM}{My Indexed Sequential Access Method}
 \acronym{OLAP}{Online Analytical Processing}
-\acronym{OLTP}{Online Transaction Processing}
-\acronym{PHP}{Hypertext Preprocessor}
 \acronym{SQL}{Structured Query Language}
-\acronym{WLAN}{Wireless Local Area Network}
 
 \end{listofacronyms}
 
@@ -98,13 +89,11 @@
 
 \bibitem{bib2}{Freeman, Eric (2007): Entwurfsmuster von Kopf bis Fuﬂ. O'REILLY}
 
-\bibitem{bib3}{\begin{verbatim}http://www.easymock.org/EasyMock3_0_Documentation.html
-Abruf: 21.12.2011\end{verbatim}} 
+\bibitem{bib4}{\begin{verbatim}http://www.postgresql.org/ (08.06.2012)\end{verbatim}} 
 
-\bibitem{bib4}{\begin{verbatim}http://dev.mysql.com Abruf (11.01.2012)\end{verbatim}} 
-\bibitem{bib5}{D‰ﬂler, Rolf (2011): MySQL. bhv}
-\bibitem{bib6}{Schwartz, Baron. (2008): High Performance MySQL. O'REILLY}
-\bibitem{bib7}{\begin{verbatim}http://code.google.com/p/google-guice Abruf: 11.01.2012\end{verbatim}} 
+\bibitem{bib5}{\begin{verbatim}http://wiki.postgresql.org/images/c/c8/2011-11-11_pg-optimizer.pdf/ (08.06.2012)\end{verbatim}} 
+
+
 
 \end{thebibliography}
 \end{flushleft}
@@ -116,8 +105,25 @@ Abruf: 21.12.2011\end{verbatim}}
 \chapter{Theorie}
 \input{Ingo/Einleitung}
 \input{Ingo/Aufgabenstellung}
+\input{Ingo/RelevanzForschungsgegenstand}
+\input{Ingo/AktuellerWissensstand}
+\input{Ingo/DBMS}
+\input{Ingo/WasIstEinAusfuehrungsplan}
+\input{Ingo/DieDreiScanAlgorithmen}
+\input{Ingo/DieDreiJoinAlgorithmen}
 
 \chapter{Datengenerator}\label{Datengenerator}
+\input{Ingo/Datenbankentwurf}
+\input{Ingo/DerDatengenerator}
+\input{Ingo/Queries}
+\input{Ingo/WasIstEinHintsSystem}
+\input{Ingo/Planerverwirrung}
+\input{Ingo/JoinReihenfolgeErzwingen}
+\input{Ingo/AusfuerhrungsplaeneQueriesIndex}
+\input{Ingo/LangsameAusfuehrungsplaene}
+\input{Ingo/Zusammenfassung}
+\input{Ingo/Ausblick}
+
 
 %\chapter{Theoretische Grundlagen}
 %Die f\"{u}r den Untersuchungsgegenstand relevanten Themen, die \"{u}ber die
