--- a/ctDataGenerator/Beleg/Ingo/Ausblick.tex
+++ b/ctDataGenerator/Beleg/Ingo/Ausblick.tex
@@ -3,4 +3,4 @@ In einem weiteren Projekt könnte man die Ausführungspläne bei Tabellen mit Parti
 
 Es könnte auch die Arbeitsweise des Planers untersucht werden, wenn mehr als fünfzehn Tabellen miteinander verknüpft werden und er mit einer genetischen Suche nach einem effizienten Auführungsplan sucht.
 
-Es könnte gezeigt werden, welchen Einfluss der Füllstand einer Tabelle und die Verteilung der Werte in einer einzelnen Spalte auf die Generierung eines Ausführungsplanes hat.
+Es könnte gezeigt werden, welchen Einfluss der Füllstand einer Tabelle und die Verteilung der Werte in einer einzelnen Spalte auf die Generierung eines Ausführungs\-planes hat.
