--- a/ctDataGenerator/Beleg/master.tex
+++ b/ctDataGenerator/Beleg/master.tex
@@ -91,7 +91,7 @@
 
 \bibitem{bib4}{\begin{verbatim}http://www.postgresql.org/ (08.06.2012)\end{verbatim}} 
 
-\bibitem{bib5}{\begin{verbatim}http://wiki.postgresql.org/images/c/c8/2011-11-11_pg-optimizer.pdf/ (08.06.2012)\end{verbatim}} 
+\bibitem{bib5}{\begin{verbatim}http://wiki.postgresql.org/ (08.06.2012)\end{verbatim}} 
 
 
 
@@ -112,8 +112,8 @@
 \input{Ingo/DieDreiScanAlgorithmen}
 \input{Ingo/DieDreiJoinAlgorithmen}
 
-\chapter{Datengenerator}\label{Datengenerator}
-<<<<<<< HEAD
+\chapter{Umsetzung}\label{Umsetzung}
+
 \input{Ingo/Datenbankentwurf}
 \input{Ingo/DerDatengenerator}
 \input{Ingo/Queries}
@@ -126,7 +126,7 @@
 \input{Ingo/Ausblick}
 
 
-\input{Christof/Abarbeitung}
+%\input{Christof/Abarbeitung}
 
 
 %\chapter{Theoretische Grundlagen}
